# IClicker

./: .mxproject  CMakeLists.txt  IClicker.ioc  main.cpp
Core/Inc/: main.h  stm32f0xx_hal_conf.h
Core/Src/: main.c  stm32f0xx_hal_msp.c
PROJECT/: project.h  rf_init.cpp
cmake/: STM32F042XX_FLASH.ld  gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
